--- a/travaux/page6.html
+++ b/travaux/page6.html
@@ -97,7 +97,7 @@
         <div class="bottom">
           <p class="copyright">© 2025 Evan Zivic. Tous droits réservés.</p>
           <div class="social-icons">
-            <a href="https://linkedin.com" target="_blank" class="social-link">
+            <a href="https://linkedin.com/in/evan-zivic" target="_blank" class="social-link">
               <img src="../svg/linkedin.svg" alt="LinkedIn">
             </a>
           </div>
