--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <div class="social-links">
                 <h3>Suivez-moi sur les réseaux sociaux</h3>
                 <ul>
-                    <li><img src="svg/linkedin.svg" alt="linkedin" class="email-icon"><a href="https://www.linkedin.com/in/evanzivic" target="_blank"></a></li>
+                    <li><img src="svg/linkedin.svg" alt="linkedin" class="email-icon"><a href="https://www.linkedin.com/in/evan-zivic" target="_blank"></a></li>
                 </ul>
             </div>
         </div>
